--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -167,11 +167,11 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
 The $T_{air}$ difference between understory and canopy temperature vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies, where dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
 
-Seasonally, canopy buffering capacity is greater in wet than dry seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]whereas in colder conditions, dense-canopy understories experience higher minimum temperatures [$T_{min}$] relative to open-canopy understories and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
+Seasonally, canopy buffering capacity is greater in wet than dry seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. Whereas in colder conditions, dense-canopy understories experience higher minimum temperatures [$T_{min}$] relative to open-canopy understories and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
 
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
-Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit [$VPD$], an important metric expressing the driving force of water loss from a leaf; tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] can to lower mean and max temperature and $VPD$ in the understory. Beyond a certain tree-height, the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit [$VPD$]--the driving force of water loss from a leaf-- tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] can also lower mean and max temperature and $VPD$ in the understory. Beyond a certain tree-height, the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
 
 ### Carbon dioxide
 
@@ -187,7 +187,7 @@ With altitude, the strength of buffering decreases, moving to open-forests [@zel
 
 ### Biophysical drivers
 
-**Vertical biophysical drivers reviewed above influence heat and water stress patterns, thereby influencing leaf temperature $T_{leaf}$ distributions along the vertical gradient.**
+**Biophysical drivers reviewed above influence vertical heat and water stress patterns, and leaf temperature $T_{leaf}$ distribution along the vertical gradient.**
 Along the biophysical gradients, leaves adjust to their environment by maintaining, when possible, a $T_{leaf}$ that is optimal for carbon assimilation and metabolic processes  [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. 
 Leaves can be cooler than air at high temperature and warmer than air at low temperature (limited homeothermy) or can be drastically warmer than $T_{air}$ (megathermy). In some cases, $T_{leaf}$ can be equalled to $T_{air}$ (poikilothermy) [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
 
@@ -221,12 +221,12 @@ Comparing forests, upper canopies of temperate deciduous species can have greate
 
 **Leaf thermoregulation is controlled by leaf traits, that are in-turn adapted to their environment [@michaletzEnergeticCarbonEconomic2016]. Therefore, are critical in maintaining desirable $T_{leaf}$ and shaping leaf metabolism (following section) across forest vertical strata (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`)[@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 
-Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves, and their vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). At greater tree height, biological--tree-height--and biophysical--light, temperature, and evaporative demand (Fig. `r fig_NEON_vertical`)--also play a role in shaping leaf traits 
+Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves, and their vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). At greater tree height, biological--tree-height--and biophysical--light, temperature, and evaporative demand (Fig. `r fig_NEON_vertical`)--also play a role in shaping leaf traits. 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
 Isolating height (>35m) from light shows that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
 
-Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research, which is sparse, is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
+Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research that is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
 
@@ -252,11 +252,11 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in canopy orientations are shaped based on canopy $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a].
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaf differences in canopy orientations are shaped based on canopy $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical and physiological traits
 
-The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprene-producing species are particularly advantageous in that they have higher heat tolerance in exposed-canopies [*REF*]
+The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb increasing temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
 
 ### Interspecific variation 
 
@@ -267,11 +267,11 @@ Across forest species, widely, show fundamental trait adaptation to light gradie
 
 ##### *Leaf lifespan*  
 
-New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in light for mature leaves can result in leaves dropping [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
+New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in light for mature leaves can result in leaf abscission [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
 
 ##### *Deciduousness*
 
-Deciduousness as a leaf trait is an adaptation to water and heat stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000b] where, deciduous leaf-loss can influence biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. Spatio-temporal leaf-emergence in deciduous-temperate forests also shapes biophysical gradient where leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
+Deciduousness as a trait is an adaptation to water and heat stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000b]. Hence, deciduous leaf-loss can influence biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. Spatio-temporal leaf-emergence in deciduous-temperate forests also shapes biophysical gradient where leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
 
 
 
@@ -292,7 +292,7 @@ nocite: |
 
 ### Stomatal conductance
 
-While $gs$ mediates crucial leaf-atmosphere interactions across species, exposed-sun-leaves, though equipped with thermoregulatory effiency are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where maximum transpiration rate and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
+$Gs$ mediates crucial leaf-atmosphere interactions across species.With exposed-sun-leaves, though equipped with thermoregulatory effiency are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where maximum transpiration rate and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
 
 ### Photosynthesis
 
@@ -301,10 +301,10 @@ This is primarily driven by the greater light available to sun-leaves. Photosynt
 
 In response to the greater light availability, sun-leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy).The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P (and water availability).
 
-$T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
+$T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), based on evidence that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
+Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), based on earlier evidence that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
 
 **Leaf thermal tolerance (Tcrit/ T50)**
 
@@ -312,24 +312,21 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) sparsely varies with exposure among recent studies, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, but results weren't significant, with both measured near ground level. 
+In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, but results weren't significant, with both measured near ground level. 
 
-Leaf thermal tolerances across species might reflect local microenvironmental conditions than regional macroclimate [@feeley_thermal_2020; Slot et al. 2020] where $T_{50}$ in *Acacia Papyrocarpa* (Benth.) trees in an Australian arid region showed higher composite climate stress and greater $T_{50}$ than other canopy positions, that correlated with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019].
+Further, leaf thermal tolerances vary less based on macroclimate, but might reflect microenvironment more [@feeley_thermal_2020; Slot et al. 2020]. Particularly, in an Australian arid region, *Acacia Papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, that correlated with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019].
 
-We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
+*We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
-*If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
+Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. @slotLeafHeatTolerance2020 found that $T_{crit}$ was greater among tropical species' large leaves with slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$)
 
-
-Global $T_{50}$s across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017) and $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
-
-Additionally, $T_{50}$ varies with species [@krauseHightemperatureToleranceTropical2010a]and leaf traits and does not vary with phylogeny [Slot et al. 2021; Perez and Feeley, 2020a]. Recently, @slotLeafHeatTolerance2020 found that $T_{crit}$ was greater among tropical species' large leaves, with slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$). 
-
+*If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
+ 
 ### Respiration
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-Across species in north-eastern oak deciduous forest, conifer temperate rainforest and in *Liquidambara styraciflua* tree, $Q_{10}$ is observed to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. In contrast, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+While in a few studies $Q_{10}$ across species has shown to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contranstingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
 
 ### VOC production
@@ -337,8 +334,6 @@ Across species in north-eastern oak deciduous forest, conifer temperate rainfore
 **Isoprene production**
 High emission rates occur in the mid-canopy, and even from very small statured trees, at a site in the Brazilian Amazon (Taylor et al., in prep).
 The high temperature carbon compensation point of sun leaves is higher in isoprene emitting species than in non-emitting species, so it is to be expected that other aspects of heat tolerance will be similarly affected by isoprenes (https://doi.org/10.1111/pce.13564). Within species, isporene production scales with light and temperature; together and independtly?
-
-
 
 ## Size-structuring within the ecosystem
 
